YELLOW ARMY - English

--- a/Eng/index.html
+++ b/Eng/index.html
@@ -1,11 +1,140 @@
-
- <!-- MY DEAR SON DON'T TRY TO BE OVER SMART JUST DM TO BUY CODE : 03104882921-->
 <!DOCTYPE html>
 <html>
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Encrypted By FTGM</title>
+  <title>YELLOW  ARMY YELLOW 💛| Watch Live Cricket Streaming Free HD | IPL, BBL, PSL, Ashes, World Cup 2025 | Today Match Live Score, Highlights & News – CricTV</title>
+
+<meta name="description" content="Watch All Live Cricket Matches Free In HD Quality On CricTV without Buffering. Enjoy Exclusive Coverage Of IPL 2025, Big Bash League (BBL), PSL, The Ashes, SA20, T20 World Cup And ODI Series. Get Instant Live Scores, Ball By Ball Commentary And Full Match Highlights. #LiveCricket #IPL2025 #CricketStreaming #FreeSports #WorldCup #CN Point" />
+
+<meta name="keywords" content="Live Cricket Streaming Free, Watch IPL Live Free, BBL Live Streaming, Ashes Live, PSL 2025 Live, Cricket Live Score, HD Sports Streaming, Free Cricket App, CN Point Live, T20 World Cup Live, Today Match Live, Star Sports Live, Jio Cinema Live, Live Cricket TV HD, Mobile Cricket Stream">
+
+<meta property="og:title" content="Watch Live Cricket Streaming Free HD | IPL, BBL, PSL & World Cup – CN Point dev" />
+<meta property="og:description" content="Watch All Live Cricket Matches Free In HD. IPL, BBL, PSL, Ashes, World Cup coverage with Live Scores & Highlights. No Buffering, 100% Free." />
+<meta property="og:type" content="website" />
+<meta property="og:url" content="https://cnpoint.pages.dev/" />
+<meta property="og:image" content="https://cnpoint.pages.dev/Sayan.png" />
+
+<meta name="twitter:card" content="summary_large_image">
+<meta name="twitter:title" content="Watch Live Cricket Streaming Free HD – CN Point">
+<meta name="twitter:description" content="Stream live cricket matches in HD. IPL, BBL, PSL, and more. Free and fast streaming on CN Point.">
+
+<link rel="canonical" href="https://cnpoint.pages.dev/" />
+
+<meta name="robots" content="index, follow" />
+<meta name="googlebot" content="index, follow" />
+
+<meta name="language" content="en" />
+<meta name="distribution" content="global" />
+<meta name="rating" content="general" />
+
+<meta property="og:type" content="website" />
+<meta property="og:title" content="Live Cricket Streaming Free | CricTV" />
+<meta property="og:description" content="Free live cricket streaming with scores, highlights & upcoming matches. IPL, BBL, Ashes & more." />
+<meta property="og:url" content="https://cnpoint.pages.dev/" />
+<meta property="og:image" content="https://cnpoint.pages.dev/Sayan.png" />
+
+<meta name="twitter:card" content="summary_large_image" />
+<meta name="twitter:title" content="Live Cricket Streaming Free | CricTV" />
+<meta name="twitter:description" content="Watch IPL, BBL, Ashes & live cricket free on CN Point." />
+<meta name="twitter:image" content="https://cnpoint.pages.dev/Sayan.png" />
+
+<link rel="preload" as="image" href="https://cnpoint.pages.dev/Sayan.png" />
+
+<script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@type": "WebSite",
+  "name": "CN Point",
+  "url": "https://cnpoint.pages.dev",
+  "inLanguage": "en",
+  "potentialAction": {
+    "@type": "SearchAction",
+    "target": "https://cnpoint.pages.dev?q={search_term_string}",
+    "query-input": "required name=search_term_string"
+  }
+}
+</script>
+
+<script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@type": "Organization",
+  "name": "CN Point",
+  "url": "https://cnpoint.pages.dev/",
+  "logo": "https://cnpoint.pages.dev/Sayan.png"
+}
+</script>
+
+<script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@type": "SportsOrganization",
+  "name": "CN POINT",
+  "sport": "Cricket",
+  "url": "https://cnpoint.pages.dev/",
+  "logo": "https://cnpoint.pages.dev/Sayan.png"
+}
+</script>
+
+<script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@type": "ItemList",
+  "name": "Live Cricket Content on Cn Point",
+  "itemListOrder": "https://schema.org/ItemListOrderAscending",
+  "itemListElement": [
+    {
+      "@type": "ListItem",
+      "position": 1,
+      "name": "Live Cricket Scores",
+      "url": "https://cnpoint.pages.dev/#Scoreboard"
+    },
+    {
+      "@type": "ListItem",
+      "position": 2,
+      "name": "Today Cricket Matches",
+      "url": "https://cnpoint.pages.dev/#today-events-section"
+    },
+    {
+      "@type": "ListItem",
+      "position": 3,
+      "name": "Upcoming Cricket Matches",
+      "url": "https://cnpoint.pages.dev/Home/#upcoming-section"
+    },
+    {
+      "@type": "ListItem",
+      "position": 4,
+      "name": "Sony LIV Cricket",
+      "url": "https://cnpoint.pages.dev/#SonyLiv"
+    },
+    {
+      "@type": "ListItem",
+      "position": 5,
+      "name": "FanCode Live Cricket",
+      "url": "https://cnpoint.pages.dev/#Fancode"
+    },
+    {
+      "@type": "ListItem",
+      "position": 8,
+      "name": "Cricket Jio TV",
+      "url": "https://cnpoint.pages.dev/#JioTV"
+    },
+    {
+      "@type": "ListItem",
+      "position": 6,
+      "name": "Ashes & Big Bash Matches",
+      "url": "https://cnpoint.pages.dev/#Home/bbl"
+    },
+    {
+      "@type": "ListItem",
+      "position": 7,
+      "name": "Cricket Highlights",
+      "url": "https://cnpoint.pages.dev/#Home/highlights"
+    }
+  ]
+}
+ <script>
 </head>
 <body>
     <script>
