--- a/Eng/index.html
+++ b/Eng/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>YELLOW  ARMY YELLOW 💛| Watch Live Cricket Streaming Free HD | IPL, BBL, PSL, Ashes, World Cup 2025 | Today Match Live Score, Highlights & News – CricTV</title>
+<title>YELLOW  ARMY 💛| Watch Live Cricket Streaming Free HD | IPL, BBL, PSL, Ashes, World Cup 2025 | Today Match Live Score, Highlights & News – CricTV</title>
 
 <meta name="description" content="Watch All Live Cricket Matches Free In HD Quality On CricTV without Buffering. Enjoy Exclusive Coverage Of IPL 2025, Big Bash League (BBL), PSL, The Ashes, SA20, T20 World Cup And ODI Series. Get Instant Live Scores, Ball By Ball Commentary And Full Match Highlights. #LiveCricket #IPL2025 #CricketStreaming #FreeSports #WorldCup #CN Point" />
 
@@ -42,7 +42,6 @@
 <link rel="preload" as="image" href="https://cnpoint.pages.dev/Sayan.png" />
 
 <script type="application/ld+json">
-{
   "@context": "https://schema.org",
   "@type": "WebSite",
   "name": "CN Point",
@@ -132,8 +131,10 @@
       "name": "Cricket Highlights",
       "url": "https://cnpoint.pages.dev/#Home/highlights"
     }
-    ]
-    
+  ]
+}
+</script>
+ 
 </head>
 <body>
     <script>
