Update and rename Encrypted_By_FTGM (1).html to index.html

--- a/Hindi/index.html
+++ b/Hindi/index.html
@@ -1,11 +1,9 @@
-
- <!-- MY DEAR SON DON'T TRY TO BE OVER SMART JUST DM TO BUY CODE : 03104882921-->
 <!DOCTYPE html>
 <html>
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Encrypted By FTGM</title>
+    <title>YELLOW ARMY 💛 × CN POINT</title>
 </head>
 <body>
     <script>
